--- a/treebanks/annotation_guidelines/anotacion.tex
+++ b/treebanks/annotation_guidelines/anotacion.tex
@@ -2134,7 +2134,7 @@ El sufijo enf\'atico {\em -ya} depende de la ra\'iz de 'su' palabra como 'mod'.
 
   
 \section{Part\'iculas}
-  \subsection{{\em hina}}\label{Sec:particulahina} Si {\em hina} se usa como una posposici\'on, el elemento que {\em hina} modifica depende de la part\'icula como 'p.arg'. {\em hina} mismo depende como 'comp' (si es una comparaci\'on) o como 'mod' de su cabeza. V\'ease \ref{Sec:comparacion} para la anotaci\'on de comparaciones con {\em hina}, y v\'ease \ref{Sec:hinaPP} para la anotaci\'on de {\em hina} como posposici\'on. Para la anotaci\'on del uso epist\'emico de {\em hina} en las combinaciones {\em -chu(s) hina} y {\em hinachu}, v\'ease \ref{Sec:chuhina} y \ref{Sec:hinachu}.
+  \subsection{{\em hina}}\label{Sec:particulahina} Si {\em hina} se usa como una posposici\'on, el elemento que {\em hina} modifica depende de la part\'icula como 'p.arg'. {\em hina} mismo depende como 'comp' (si es una comparaci\'on) o como 'mod' de su cabeza. V\'ease \ref{Sec:comparacion} para la anotaci\'on de comparaciones con {\em hina}, y v\'ease \ref{Sec:hinaPP} para la anotaci\'on de {\em hina} como posposici\'on. Para la anotaci\'on del uso epist\'emico de {\em hina} en las combinaciones {\em -chu(s) hina} y {\em hinachu}, v\'ease \ref{Sec:chuhina} y \ref{Sec:hinachu}. La combinaci\'on de {\em -chu sina} se anota de la misma forma.
 
 \subsection{{\em pacha} ('desde')}\label{Sec:particulapacha}
 
