Edited wiki page Installation_of_macros_for_TrEd through web user interface.

--- a/wiki/Installation_of_macros_for_TrEd.wiki
+++ b/wiki/Installation_of_macros_for_TrEd.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 In order to use the annotation mode for Quechua and/or parallel treebanks in the Tiger format (phrase structures) in TrEd, you have to install the macros in treebanks/tred_macros. 
 
  # install TrEd from here:
@@ -12,5 +13,26 @@ squoia_parallel
 quechua
 }}}
 
- == Description of parallel_squoia ==
+ == Description of parallel_squoia macro ==
+ * displays parallel trees annotated with Tiger phrase structures
+ * n-n sentence alignment possible
+ * two types of alignments: 'fuzzy' vs. 'exact'
+
+ files needed:
+ * two files containing the monolingual treebanks
+ * one alignment file 
+  ** see example in parallel_squoia/test_align.pml
+  ** note: the author set in the header of the alignment file will automatically be added to every newly created or edited alignment
+ * schema files of the individual treebanks
+ * schema file for the alignment file 
+  ** see parallel_squoia/resources/alignment_squoia_schema.xml
+
+ functions:
+ * to create an alignment, drag a node and drop it above another node
+ * to delete an alignment, drag one of the aligned nodes and drop it above the other node
+ * to change the attributes of an alignment (author, date, quality),  drag one of the aligned nodes and drop it above the other node, pressing CTRL
+ * to change the sentence alignment, press CRTL and l (L)
+
+
+ == Description of quechua macro ==
    follows...
