--- a/morphology/spellChecker/README
+++ b/morphology/spellChecker/README
@@ -4,7 +4,7 @@ para obtener informaciones acerca de la instalación, por favor véase:
 http://code.google.com/p/squoia/wiki/InstallationSpellChecker
 
 this spell checker can be tested online at:
-se pude probar este corrector en línea en:
+se puede probar este corrector en línea en:
 
 http://kitt.ifi.uzh.ch/kitt/quechua/spellcheck.html
 
