--- a/trunk/treebanks/annotation_guidelines/anotacion.tex
+++ b/trunk/treebanks/annotation_guidelines/anotacion.tex
@@ -145,7 +145,7 @@ La cabeza de cada \'arbol de dependencias es 'VROOT' ('virtual root'), el \'unic
   \draw (8,-2) node (-nman) {-nman};
 
      \path[-] (-shani) edge  node[label=left:$s.subj$]{} (chayamu);
-    \path[-] (-chi) edge  node[label=left:$caus$] {} (panpaya);
+    \path[-] (-chi) edge  node[label=left:$mod$] {} (panpaya);
      \path[-] (-nman) edge  node[label=right:$s.subj$] {} (panpaya);
 \end{tikzpicture}}
 \caption{Cabezas en formas verbales}\label{Fig:VRoot}
