--- a/treebanks/annotation_guidelines/anotacion.tex
+++ b/treebanks/annotation_guidelines/anotacion.tex
@@ -2120,7 +2120,7 @@ En preguntas que contienen una combinaci\'on de {\em -chu} y un sufijo evidencia
 \end{examples}
 
 \subsubsection{La combinaci\'on {\em -chu} y {\em -s}}\label{Sec:chus}
-La combinaci\'on de {\em -chu} y {\em -s} no tiene una funci\'on evidencial, sino epist\'emica, expresa duda. Por lo tanto, en este caso, el sufijo de evidencial {\em -s} depende de {\em -chu} como 'mod', y {\em -chu} depende de la cabeza de la oraci\'on como 'epst'.
+La combinaci\'on de {\em -chu} y {\em -s} no tiene una funci\'on evidencial, sino epist\'emica, expresa duda. Por lo tanto, en este caso, el sufijo de evidencial {\em -s} depende de {\em -chu} como 'mod', y {\em -chu} depende \sout{de la cabeza de la oraci\'on} del elemento que modifica como 'epst'.
 
    \subsection{{\em-qa/-ri}}
 El marcador de t\'opico {\em -qa} siempre depende de 'su' ra\'iz como 'topic', v\'ease por ejemplo Fig. \ref{Fig:chucoord}.
@@ -2682,7 +2682,7 @@ Abreviaciones se anotan seg\'un la funci\'on que tienen en la oraci\'on. Si la f
 
 \section{Nombres}
 
-Nombres complejos que contienen varias palabras se anotan de la siguiente manera: El apellido es la cabeza, si hay m\'as que un apellido, el primero es la cabeza. Todos los dem\'as partes del nombre, sean t\'itulos o nombres, dependen de \'el como 'nme' ('name'). V\'ease la anotaci\'on de 'Gregorio Mamani' en Fig. \ref{Fig:KAN} o de 'Tupaq Amaru' en Fig. \ref{Fig:jusivo}.
+Nombres complejos que contienen varias palabras se anotan de la siguiente manera: El apellido es la cabeza, si hay m\'as que un apellido, el \'ultimo es la cabeza (ya que \'este lleva los sufijos). Todos los dem\'as partes del nombre, sean t\'itulos o nombres, dependen de \'el como 'nme' ('name'). V\'ease la anotaci\'on de 'Gregorio Mamani' en Fig. \ref{Fig:KAN} o de 'Tupaq Amaru' en Fig. \ref{Fig:jusivo}.
 
 
 \section{Oraciones}\label{Sec:oraciones}
