--- a/trunk/treebanks/annotation_guidelines/anotacion.tex
+++ b/trunk/treebanks/annotation_guidelines/anotacion.tex
@@ -172,25 +172,37 @@ La cabeza de cada \'arbol de dependencias es 'VROOT' ('virtual root'), el \'unic
 -tiya & +Sml\\
 -kacha/-ykacha & +Intrup\\
 -nya/-miya & +Cont\\
--raya/-nraya & +Perdur\\
--yku/-yu & +Aff\\
--rqu/-ru & +Rptn\\
--ysi/-schi & +Ass\\
+-raya/-nraya/-laya & +Perdur\\
+-yku/-yu/-yka/-ya/-y & +Aff\\
+-rqu/-ru/-rqa/-ra & +Rptn\\
+-ysi/-schi/-scha & +Ass\\
 -naya & +Des \\
+-rku & +Dir\\
 -cha & +Vdim\\
 -pa & +Rep\\
 -paya & +MRep\\
 -na & +Rzpr\\
 -chi & +Caus\\
 -ri & +Inch\\
+-qi & +Onom\\
 -lli & +Autotrs\\
 -ku & +Rflx\_Int\\
 -mu & +Cis\_Trs\\
--pu & +Rgr\_Iprs\\
+-pu & +Rgr\_Iprs\\ \addlinespace
+\multicolumn{2}{l}{pr\'estamos del Aymara:}\\
+-naqa & +Intrup\\
+-tata & +Dir\\
+-thapi & +Dir \\
+-kipa & +Dir \\
+-kata & +Dir\\
+-qa & +Dir\\
+-t'a & +Mom\\
+
 \bottomrule
 \end{tabular}
 \end{center}
 \end{table}
+
 
 Todos estos sufijos, excepto \textit{-ku} y {\em -chi}, no se separan de la ra\'iz verbal, as\'i que no hace falta integrarlos al \'arbol sint\'actico. \\
 {\em -ku} y {\em -chi} al contrario se separan de la ra\'iz, los dos sufijos dependen de la ra\'iz con la etiqueta 'mod' (modifier), v\'ease Fig. \ref{Fig:ku}.
@@ -2125,7 +2137,7 @@ La combinaci\'on de {\em -chu} y {\em -s} no tiene una funci\'on evidencial, sin
    \subsection{{\em-qa/-ri}}
 El marcador de t\'opico {\em -qa} siempre depende de 'su' ra\'iz como 'topic', v\'ease por ejemplo Fig. \ref{Fig:chucoord}.
 En cambio, el marcador {\em -ri} tiene dos funciones: marca el t\'opico, pero tambi\'en tiene una funci\'on interrogativa. Por lo tanto, {\em -ri} depende de la cabeza de la oraci\'on (el verbo finito) c\'omo 'intr'.
-Con los dos marcadores, el atributo 'discourse' de la cabeza cambia a 'TOPIC'. 
+Con los dos marcadores, el atributo 'discourse' de la cabeza {\em del sintagma entero} cambia a 'TOPIC' (si hay un sufijo de caso, el atributo 'discourse' de este sufijo cambia a 'TOPIC', no \'el de la ra\'iz). 
 
 
   \subsection{{\em -ya}}
