--- a/treebanks/annotation_guidelines/anotacion.tex
+++ b/treebanks/annotation_guidelines/anotacion.tex
@@ -10,10 +10,11 @@
 \usepackage{varwidth}
 \usepackage{arydshln}
 %\usepackage{lsalike}
-\usepackage{hyperref}
+\usepackage[usenames,dvipsnames]{xcolor}
+
+
 \usepackage[normalem]{ulem}
 \usepackage{framed}
-\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{tikz}
 \usetikzlibrary{arrows,decorations.pathmorphing,backgrounds,fit,decorations.pathreplacing,fadings}
 %opening
@@ -23,6 +24,8 @@
 \usepackage[sort&compress,authoryear]{natbib}
 \bibpunct[:]{(}{)}{,}{}{}{:}
 
+\usepackage{hyperref}
+ \hypersetup{colorlinks, urlcolor= blue!50!black, linkcolor=blue!50!black, citecolor=green!40!black}
 \title{Esquema de anotaciones sintácticas para el Quechua Sure\~no}
 \author{Annette Rios}
 
